--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -12,4 +12,10 @@
     <style name="ButtonMain">
         <item name="android:background">@drawable/button_main</item>
     </style>
+    <style name="EditTextProfile" parent="Theme.AppCompat.Light">
+        <item name="android:textSize">16sp</item>
+        <item name="colorControlNormal">@color/colorSecondaryText</item>
+        <item name="colorControlActivated">@color/colorPrimaryText</item>
+        <item name="android:textColorPrimaryDisableOnly">@color/colorPrimaryText</item>
+    </style>
 </resources>
