--- a/app/src/main/res/layout/dialog_ver_code.xml
+++ b/app/src/main/res/layout/dialog_ver_code.xml
@@ -9,8 +9,8 @@
             android:id="@+id/ti_password"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="8sp"
-            android:layout_marginTop="15sp">
+            android:layout_margin="8dp"
+            android:layout_marginTop="16dp">
 
         <EditText
                 android:id="@+id/et_password"
@@ -31,7 +31,7 @@
             android:layout_height="wrap_content"
             android:textSize="14sp"
             android:textColor="@color/colorWhite"
-            android:layout_margin="8sp"
+            android:layout_margin="8dp"
             android:text="ok"/>
 
 </LinearLayout>
