--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -12,18 +12,18 @@
             android:layout_centerHorizontal="true"
             android:layout_alignParentTop="true"
             android:textSize="24sp"
-            android:layout_marginTop="40sp"
+            android:layout_marginTop="40dp"
             android:textColor="@color/colorPrimaryText"
     />
 
     <ImageView
             android:id="@+id/iv_icon"
-            android:layout_height="90sp"
-            android:layout_width="90sp"
+            android:layout_height="90dp"
+            android:layout_width="90dp"
             android:src="@drawable/ic_party"
             android:layout_centerHorizontal="true"
             android:layout_below="@+id/tv_welcome"
-            android:layout_marginTop="40sp"
+            android:layout_marginTop="40dp"
     />
 
     <EditText
@@ -33,7 +33,7 @@
             android:ems="15"
             android:layout_below="@+id/iv_icon"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="30sp"
+            android:layout_marginTop="30dp"
             android:hint="@string/login"
     />
 
@@ -44,33 +44,33 @@
             android:ems="15"
             android:layout_below="@+id/et_login"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="15sp"
+            android:layout_marginTop="15dp"
             android:hint="@string/password"
     />
 
     <Button
             android:id="@+id/btn_log_in"
             style="@style/ButtonMain"
-            android:layout_width="280sp"
-            android:layout_height="40sp"
+            android:layout_width="280dp"
+            android:layout_height="40dp"
             android:text="@string/log_in"
             android:layout_centerHorizontal="true"
             android:layout_below="@+id/et_password"
             android:textSize="20sp"
             android:textColor="@color/colorWhite"
-            android:layout_marginTop="60sp"
+            android:layout_marginTop="60dp"
     />
 
     <Button
             android:id="@+id/btn_sign_in_offer"
             style="@style/ButtonMain"
-            android:layout_width="140sp"
-            android:layout_height="30sp"
+            android:layout_width="140dp"
+            android:layout_height="30dp"
             android:text="@string/sign_in"
             android:layout_centerHorizontal="true"
             android:layout_below="@+id/btn_log_in"
             android:textSize="10sp"
             android:textColor="@color/colorWhite"
-            android:layout_marginTop="60sp"
+            android:layout_marginTop="60dp"
     />
 </RelativeLayout>
