--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -7,10 +7,10 @@
 
     <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/iv_photo"
-            android:layout_width="90sp"
-            android:layout_height="90sp"
-            android:layout_marginTop="60sp"
-            android:layout_marginStart="30sp"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
+            android:layout_marginTop="60dp"
+            android:layout_marginStart="30dp"
             android:src="@drawable/ic_empty_profile_photo_24dp"
             app:civ_border_width="1dp"
             app:civ_border_color="#FF000000"
@@ -18,14 +18,14 @@
 
     <TextView
             android:id="@+id/tv_user_name"
-            android:layout_width="160sp"
+            android:layout_width="160dp"
             android:layout_height="wrap_content"
             android:textColor="@color/colorPrimaryText"
             android:textSize="20sp"
             android:layout_toEndOf="@+id/iv_photo"
             android:layout_alignTop="@+id/iv_photo"
-            android:layout_marginTop="30sp"
-            android:layout_marginStart="16sp"
+            android:layout_marginTop="30dp"
+            android:layout_marginStart="16dp"
             android:text="Some User Name"/>
 
     <ImageButton
@@ -34,7 +34,7 @@
             android:layout_height="wrap_content"
             android:layout_alignTop="@+id/tv_user_name"
             android:layout_toRightOf="@+id/tv_user_name"
-            android:padding="4sp"
+            android:padding="4dp"
             android:background="@null"
             android:src="@drawable/ic_mode_edit_black_24dp"
     />
@@ -43,7 +43,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/iv_photo"
-            android:layout_marginTop="40sp"
+            android:layout_marginTop="40dp"
             android:layout_centerHorizontal="true">
 
         <TextView
@@ -67,7 +67,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/et_phone_num"
-                android:layout_marginTop="16sp"
+                android:layout_marginTop="16dp"
                 android:textColor="@color/colorSecondaryText"
                 android:text="@string/card_number"/>
         <EditText
