--- a/app/src/main/res/layout/purchase_item.xml
+++ b/app/src/main/res/layout/purchase_item.xml
@@ -6,14 +6,14 @@
                 android:padding="8dp">
 
     <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/iv_party_icon"
+            android:id="@+id/iv_purchase_icon"
             android:layout_width="64dp"
             android:layout_height="64dp"
             android:layout_centerVertical="true"
             android:layout_marginStart="8dp"/>
 
     <TextView
-            android:id="@+id/tv_party_name"
+            android:id="@+id/tv_purchase_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="24sp"
@@ -21,40 +21,29 @@
             android:textColor="@color/colorPrimaryText"
             android:layout_marginTop="8dp"
             android:layout_marginStart="16dp"
-            tools:text="MyParty" />
+            tools:text="SomePurchase" />
 
     <TextView
-            android:id="@+id/tv_org_name"
+            android:id="@+id/tv_creditor_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="16sp"
-            android:layout_alignStart="@id/tv_party_name"
-            android:layout_below="@+id/tv_party_name"
+            android:layout_alignStart="@id/tv_purchase_name"
+            android:layout_below="@+id/tv_purchase_name"
             android:textColor="@color/colorSecondaryText"
-            tools:text="BestPeople" />
+            tools:text="KillReal" />
 
 
 
     <TextView
-            android:id="@+id/tv_friends_amount"
+            android:id="@+id/tv_price"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="10sp"
+            android:textSize="24sp"
             android:layout_marginTop="4dp"
             android:layout_marginEnd="8dp"
             android:layout_alignParentEnd="true"
-            android:textColor="@color/colorSecondaryText"
-            tools:text="2 your friends " />
+            android:textColor="@color/colorGreenNumber"
+            tools:text="100$ "/>
 
-    <TextView
-            android:id="@+id/tv_date"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="12sp"
-            android:layout_below="@+id/tv_friends_amount"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_alignParentEnd="true"
-            android:textColor="@color/colorSecondaryText"
-            tools:text="24.02.2000"/>
 </RelativeLayout>
