--- a/app/src/main/res/layout/purchase_item.xml
+++ b/app/src/main/res/layout/purchase_item.xml
@@ -17,7 +17,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="24sp"
-            android:layout_toEndOf="@id/iv_party_icon"
+            android:layout_toEndOf="@id/iv_purchase_icon"
             android:textColor="@color/colorPrimaryText"
             android:layout_marginTop="8dp"
             android:layout_marginStart="16dp"
