--- a/app/src/main/res/layout/user_item.xml
+++ b/app/src/main/res/layout/user_item.xml
@@ -5,12 +5,12 @@
                 android:layout_height="88sp"
                 android:padding="8dp">
 
-    <ImageView
-            android:id="@+id/iv_user_icon"
-            android:layout_width="56sp"
-            android:layout_height="56dp"
-            android:layout_centerVertical="true"
-            android:layout_marginStart="16dp"/>
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/iv_user_icon"
+        android:layout_width="56sp"
+        android:layout_height="56dp"
+        android:layout_centerVertical="true"
+        android:layout_marginStart="16dp"/>
 
     <TextView
             android:id="@+id/tv_name"
@@ -38,7 +38,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="20sp"
-            android:layout_marginTop="4dp"
+            android:layout_marginTop="16dp"
             android:layout_marginEnd="8dp"
             android:layout_alignParentEnd="true"
             android:textColor="@color/colorGreenNumber"
