--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:app="http://schemas.android.com/apk/res-auto"
+                xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
                 android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
@@ -26,7 +26,7 @@
             android:layout_alignTop="@+id/iv_photo"
             android:layout_marginTop="30dp"
             android:layout_marginStart="16dp"
-            android:text="Some User Name"/>
+            tools:text="Some User Name"/>
 
     <ImageButton
             android:id="@+id/ib_edit"
@@ -58,7 +58,7 @@
                 android:layout_height="wrap_content"
                 android:ems="18"
                 android:layout_below="@id/tv_phone_num"
-                android:hint="+X-XXX-XXX-XX-XX"
+                android:hint="@string/phone_def"
                 style="@style/EditTextProfile"/>
 
 
@@ -76,7 +76,7 @@
                 android:layout_height="wrap_content"
                 android:ems="18"
                 android:layout_below="@id/tv_card_num"
-                android:hint="XXXX-XXXX-XXXX-XXXX"
+                android:hint="@string/card_def"
                 style="@style/EditTextProfile"/>
     </RelativeLayout>
 
