--- a/app/src/main/res/layout/fragment_add_party.xml
+++ b/app/src/main/res/layout/fragment_add_party.xml
@@ -6,11 +6,28 @@
                 android:layout_height="match_parent">
         <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content">
 
+            <com.google.android.material.appbar.AppBarLayout
+                    android:id="@+id/appbar"
+                    android:layout_width="match_parent"
+                    android:background="@color/colorPrimary"
+                    android:theme="@style/Base.Theme.AppCompat.Light.DarkActionBar"
+                    android:layout_height="wrap_content">
+
+                <androidx.appcompat.widget.Toolbar
+                        android:id="@+id/toolbar"
+                        app:titleTextColor="@color/colorWhite"
+                        android:layout_width="match_parent"
+                        android:layout_height="?actionBarSize">
+
+                </androidx.appcompat.widget.Toolbar>
+            </com.google.android.material.appbar.AppBarLayout>
+
             <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/ti_title"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerHorizontal="true"
+                    android:layout_below="@id/appbar"
                     android:layout_marginTop="20dp">
                 <EditText
                         android:id="@+id/et_title"
