--- a/app/src/main/res/layout/fragment_add_purchase.xml
+++ b/app/src/main/res/layout/fragment_add_purchase.xml
@@ -37,6 +37,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:ems="15"
+                        android:maxLength="12"
                         android:hint="@string/title"
                 />
             </com.google.android.material.textfield.TextInputLayout>
