--- a/app/src/main/res/layout/fragmet_my_party_list.xml
+++ b/app/src/main/res/layout/fragmet_my_party_list.xml
@@ -1,10 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
+             xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
+    <com.google.android.material.appbar.AppBarLayout
+            android:id="@+id/appbar"
+            android:layout_width="match_parent"
+            android:background="@color/colorPrimary"
+            android:theme="@style/Base.Theme.AppCompat.Light.DarkActionBar"
+            android:layout_height="wrap_content">
+
+        <androidx.appcompat.widget.Toolbar
+                android:id="@+id/toolbar"
+                app:titleTextColor="@color/colorWhite"
+                android:layout_width="match_parent"
+                android:layout_height="?actionBarSize">
+
+        </androidx.appcompat.widget.Toolbar>
+    </com.google.android.material.appbar.AppBarLayout>
+
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
             android:id="@+id/swipe_container"
+            android:layout_below="@+id/appbar"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
@@ -20,8 +38,9 @@
             android:id="@+id/btn_add"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="end|bottom"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentEnd="true"
             android:layout_margin="16sp"
             android:backgroundTint="@color/colorButton"
             android:src="@drawable/ic_add_24dp"/>
-</FrameLayout>
+</RelativeLayout>
