--- a/app/src/main/res/menu/toolbar_items.xml
+++ b/app/src/main/res/menu/toolbar_items.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-      xmlns:yourapp="http://schemas.android.com/apk/res-auto">
+      xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
             android:id="@+id/action_search"
-            android:title="@android:string/search_go"
-            android:icon="@drawable/ic_search_white_24dp"
-            yourapp:showAsAction="always|collapseActionView" />
+            android:title="Search"
+            app:actionViewClass="androidx.appcompat.widget.SearchView"
+            app:showAsAction="ifRoom|collapseActionView"
+            android:icon="@drawable/ic_search_white_24dp"/>
 </menu>
