--- a/app/src/main/res/layout/fragment_add_party.xml
+++ b/app/src/main/res/layout/fragment_add_party.xml
@@ -33,6 +33,7 @@
                         android:id="@+id/et_title"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:maxLength="15"
                         android:ems="15"
                         android:hint="@string/title"
                 />
