--- a/app/src/main/res/layout/fragment_add_party.xml
+++ b/app/src/main/res/layout/fragment_add_party.xml
@@ -33,7 +33,8 @@
                         android:id="@+id/et_title"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:maxLength="15"
+                        android:ellipsize="end"
+                        android:maxLines="1"
                         android:ems="15"
                         android:hint="@string/title"
                 />
