--- a/app/src/main/res/layout/user_item.xml
+++ b/app/src/main/res/layout/user_item.xml
@@ -17,6 +17,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="24sp"
+            android:ellipsize="end"
+            android:ems="7"
             android:layout_toEndOf="@id/iv_user_icon"
             android:textColor="@color/colorPrimaryText"
             android:layout_marginTop="8dp"
